--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                id="password" required>
                     </p>
                     <p class="c-form-field c-form-field--option">
-                        <input class="c-option" type="checkbox" id="rememberme">
+                        <input class="c-option c-option--hidden c-custom-option c-custom-option__fake-input c-custom-option__fake-input--checkbox" type="checkbox" id="rememberme">
                         <label class="c-label c-label--option" for="rememberme">
                             Remember me
                         </label>
